# docs/swagger.yaml
@@ -204,6 +204,8 @@ definitions:
         type: array
       final_score:
         type: number
+      max_score:
+        type: number
       total_score:
         type: number
       total_violation_points:
@@ -954,6 +956,8 @@ definitions:
             type: string
           location:
             type: string
+          logo_url:
+            type: string
           price:
             type: string
           target_date:
@@ -961,6 +965,8 @@ definitions:
           title:
             type: string
         type: object
+      event_level_id:
+        type: string
       payment:
         properties:
           amount_paid:
